--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,13 @@
 .header {
     background-color: #F85606;
     color: #fff;
+    padding: 0;
+    margin: 0;
 }
 .header h1{
     text-align: center;
+}
+.header .MuiContainer-root{
+    padding-inline: 0 !important;
+    margin-inline: 0 !important;
 }
